project/log/build_2026-05-06_12-50-40/perception/stderr.log
  File "/home/cc/ee106a/sp26/class/ee106a-abh/final_project/project/install/perception/lib/python3.10/site-packages/perception/process_pointcloud.py", line 53
    )5
     ^
SyntaxError: invalid syntax

